--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2375,6 +2375,8 @@ footer {
     color: white;
     padding: 3rem 2rem 1rem 2rem;
     margin-top: 0;
+    position: relative;
+    z-index: 2;
 }
 
 .footer-content {
